<resources>
    <string name="app_name">My Plants</string>

    <string name="TiTle">MY PLANTS</string>

    <string name="m_pList">My Plants List</string>
    <string name="m_shop">Shop</string>
    <string name="m_reco">Recommend Plants</string>
    <string name="m_sub">Main</string>
    <string name="m_diary">Plants Diary</string>
    <string name="m_set">Setting</string>
    <string name="s_pro">My Profile</string>
    <string name="s_alarm">Alarm</string>
    <string name="set_noti">Receive Notification</string>
    <string name="noti_off">Not Receive Notification</string>
    <string name="noti_on">Receive Notification</string>
    <string name="s_info">App Info</string>
    <string name="shop_pot">Flowerpot</string>
    <string name="shop_flower">Flower</string>
    <string name="shop_nutrient">Nutritional Supplement</string>
    <string name="shop_soil">Soil</string>
    <string name="shop_sprinkler">Sprinkler</string>
    <string name="shop_acc">Accessories</string>
    <string name="p_picBtn">Gallery Open</string>
    <string name="p_myplantBtn">Set my Representative plants</string>
    <string name="p_name">Name :</string>
    <string name="p_email">Email :</string>
    <string name="p_state">About Me :</string>
    <string name="p_plant">Representative plants : </string>

    <string name="p_edit">Edit Profile</string>
    <string name="pe_edit">Profile Edit</string>
    <string name="hint_name">enter your name</string>
    <string name="hint_email">enter your email</string>
    <string name="hint_state">enter your status message</string>
    <string name="pe_set">Save</string>

    <string name="save_new">Save Diary</string>
    <string name="hint">Type a text </string>


    <string name="show_state"> About Me </string>
    <string name="reco1">난이도 별 추천</string>
    <string name="reco2">크기 별 추천</string>
    <string name="reco3">공기 정화 식물 추천</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="big">Large</string>
    <string name="mid">Medium</string>
    <string name="small">Small</string>
    <string name="clean_plant">공기 정화 식물</string>

    <string name = "pSearch_hint">Enter the plant name</string>

    <string name="i_name">● App name : </string>
    <string name="i_ver">● App version : </string>
    <string name="ver">version 1.0</string>
    <string name="i_dev">● Developers : </string>
    <string name="developer">KimKY, KimHK, KimJH, LeeSR</string>
    <string name="i_mod">● Modified Date : </string>
    <string name="modify">2020.06</string>

    <string name="plant_name">Plant Name: </string>
    <string name="plant_size">Plant Size: </string>
    <string name="plant_level">Plant Level: </string>
    <string name="plant_feature">Plant Feature: </string>
    <string name="plant_watering">Plant Watering: </string>
    <string name="plant_nickname">Plant Nickname: </string>
    <string name="hintt">Enter nickname</string>
    <string name="search">Enter plants name</string>
    <string name="temperature">Optimal Temperature: </string>
    <string name="plant_caution">Precaution: </string>
    <string name="plant_date">Saved Date: </string>
    <string name="back_btn">Back</string>

    <string name="delete_btn">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
