<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textStyle="bold"
        android:textSize="45dp"
        android:gravity="center"
        android:text="@string/s_info"
        android:textColor="@color/text"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_name"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_ver"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:textColor="@color/text"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_dev"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textColor="@color/text"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_mod"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            android:textColor="@color/text"
            android:textSize="20dp"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:layout_gravity="center"
        android:background="@color/SetBtn_color"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/backBtn"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/seed"
        />



</LinearLayout>