<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textStyle="bold"
            android:textSize="45dp"
            android:gravity="center"
            android:text="@string/m_shop"
            android:textColor="@color/text"/>
        <Button
            android:id="@+id/shop_pot"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_pot"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/shop_soil"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_soil"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/shop_flower"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_flower"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/shop_nut"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_nutrient"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/shop_spr"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_sprinkler"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/shop_acc"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/shop_acc"
            android:textColor="@color/text"
            android:textSize="20dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/seed"
            />
    </LinearLayout>

</FrameLayout>