<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetFragment"
    android:background="@color/background"
    android:id="@+id/fragment_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textStyle="bold"
            android:textSize="45dp"
            android:gravity="center"
            android:text="@string/m_set"
            android:textColor="@color/text"/>
        <Button
            android:id="@+id/set_pro"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/s_pro"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/set_alarm"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/s_alarm"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <Button
            android:id="@+id/set_info"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SetBtn_color"
            android:text="@string/s_info"
            android:textColor="@color/text"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/plant"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->


</FrameLayout>