<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/s_pro"
            android:textSize="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/text"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/p_picBtn"
            android:textSize="18dp"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/image"
            android:background="@color/SetBtn_color"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pro_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="25dp"
                android:paddingTop="5dp"
                android:text="@string/p_name"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textSize="28dp" />
            <TextView
                android:id="@+id/pro_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"

                android:textColor="@color/text"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pro_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="25dp"
                android:text="@string/p_email"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/pro_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:textColor="@color/text"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pro_plant"
                android:text="@string/p_plant"
                android:paddingLeft="25dp"
                android:textColor="@color/text"
                android:layout_margin="10dp"
                android:textSize="28dp"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prop_btn"
                android:text="@string/p_myplantBtn"
                android:layout_gravity="center"
                android:background="@color/SetBtn_color"
                android:textColor="@color/text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pro_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="25dp"
                android:text="@string/p_state"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/pro_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_edit"
                android:layout_gravity="center"
                android:background="@color/SetBtn_color"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/edit_pro"
                android:layout_marginRight="5dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_btn"
                android:layout_gravity="center"
                android:background="@color/SetBtn_color"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/backBtn"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/seed" />
    </LinearLayout>
</ScrollView>

</RelativeLayout>