<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background">

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/plant_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@color/background"
        android:scaleType="fitCenter" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_name"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/plant_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_size"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
    <TextView
        android:id="@+id/plant_size"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_level"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/plant_level"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_feature"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/plant_feature"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_watering"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/plant_watering"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/plant_nickname"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/nickname"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:textStyle="bold"
            android:hint="@string/hintt"
            android:textColor="@color/text"
            android:textSize="18dp"/>
    </LinearLayout>
    <ImageButton
        android:background="@color/background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/plus"
        android:id="@+id/plus"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:layout_gravity="center"
        android:background="@color/SetBtn_color"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/backBtn"
        android:layout_marginLeft="5dp"/>

</LinearLayout>